# vlock

./: CMakeLists.txt  ChangeLog  Makefile  NEWS  README  TODO  config.mk  configure
cmake/: GenerateWrapper.cmake
man/: vlock-main.8  vlock-plugins.5  vlock.1
modules/: CMakeLists.txt  Makefile  cmatrix.c  cmatrix.h  info_box.c  info_box.h  train.c  train.h  wetpipes.c
src/: auth-pam.c  auth-shadow.c  auth.h  console_switch.c  logging.c  logging.h  module.c  module.h  plugin.c  plugin.h  plugins.c  plugins.h  process.c  process.h  prompt.c  prompt.h  script.c  script.h  signals.c  signals.h  terminal.c  terminal.h  tsort.c  tsort.h  util.c  util.h  vlock-config.c  vlock-main.c  vlock.sh
tests/: Makefile  test_tsort.c  vlock-test.c
